// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper Text should render danger text with danger icon if dange variant is specified 1`] = `
<scale-helper-text class="helper-text helper-text--danger" variant="danger">
  danger
  <span></span>
  <scale-icon-alert-error color="var(--telekom-color-text-and-icon-functional-danger)" size="11"></scale-icon-alert-error>
</scale-helper-text>
`;

exports[`Helper Text should render informational helper text with info icon if informational variant is specified 1`] = `
<scale-helper-text class="helper-text helper-text--informational" variant="informational">
  informational
  <span></span>
  <scale-icon-alert-information color="var(--telekom-color-text-and-icon-functional-informational)" size="11"></scale-icon-alert-information>
</scale-helper-text>
`;

exports[`Helper Text should render informational helper text with info icon if no variant is specified 1`] = `
<scale-helper-text class="helper-text helper-text--informational">
  informational
  <span></span>
  <scale-icon-alert-information color="var(--telekom-color-text-and-icon-functional-informational)" size="11"></scale-icon-alert-information>
</scale-helper-text>
`;

exports[`Helper Text should render neutral text without icon if neutral variant is specified 1`] = `
<scale-helper-text class="helper-text helper-text--neutral" variant="neutral">
  neutral
  <span></span>
</scale-helper-text>
`;

exports[`Helper Text should render success text with success icon if success variant is specified 1`] = `
<scale-helper-text class="helper-text helper-text--success" variant="success">
  success
  <span></span>
  <scale-icon-alert-success color="var(--telekom-color-text-and-icon-functional-success)" size="11"></scale-icon-alert-success>
</scale-helper-text>
`;

exports[`Helper Text should render warning text with warning icon if warning variant is specified 1`] = `
<scale-helper-text class="helper-text helper-text--warning" variant="warning">
  warning
  <span></span>
  <scale-icon-alert-information color="var(--telekom-color-text-and-icon-functional-warning)" size="11"></scale-icon-alert-information>
</scale-helper-text>
`;
